fixed alignment issues with overall grid

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* overflow-x: hidden; */
+
 }
+
+/* #root {
+  height: 88% !important;
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
